# livengine

./: CMakeLists.txt  CMakePresets.json  LICENSE
.github/workflows/: blank.yml
3rd/SDL/: CMakeLists.txt
android/app/jni/: CMakeLists.txt
assets/lualib/: archer_blue.lua
assets/resources/: archer_blue.tsx  dynamite.tsx  foam2.tsx  map.lua  torch_red.tsx  tree.tsx
assets/resources/shaders/: shader.vert
assets/scripts/example/: collision_polygons.lua  collision_rectangles.lua  collision_rectanglesx.lua  tilemap.lua
cmake-build/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  AsposeXlsTest.csproj  Livlib.csproj  Project.sln  SpireXlsTest.csproj  Test1.csproj  Test2.csproj  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  livengine.sln  livnet.sln
cmake-build/.cmake/api/v1/reply/: cache-v2-7bd26f2f36211a5eaca2.json  cache-v2-883cae907033cdf648bf.json  cache-v2-d25872bdfb2ed2982300.json  cmakeFiles-v1-34a4b034c3cd98b96cf7.json  cmakeFiles-v1-5d856b2b7e8db3aef299.json  cmakeFiles-v1-ffeef9077ca37fdddfae.json  codemodel-v2-04d9517de9fea0721181.json  codemodel-v2-1edb7dd03ec14ecfd72e.json  codemodel-v2-70fef34d51b3e86ba009.json  codemodel-v2-7bbfb44ae0995b563f32.json  codemodel-v2-aef8d718e3aea578219b.json  directory-3rd.SDL-Release-d7cdcdeb898e98435954.json  directory-livnet-Release-17c4eeaac380a0277ab4.json  index-2026-01-30T09-06-08-0582.json  index-2026-01-30T16-39-23-0320.json  index-2026-01-30T16-42-10-0385.json  index-2026-01-30T17-19-45-0191.json  index-2026-01-31T16-39-42-0448.json  target-ALL_BUILD-Debug-d4368000abb28097cc02.json  target-ALL_BUILD-MinSizeRel-33b207c27d3d359e2653.json  target-ALL_BUILD-MinSizeRel-4ddcb7f2886213ae7d82.json  target-ALL_BUILD-MinSizeRel-aac25b6bce2d796020e8.json  target-ALL_BUILD-RelWithDebInfo-2a90bf53fdb489e09a44.json  target-ALL_BUILD-RelWithDebInfo-ddde064f8120ea87541d.json  target-ALL_BUILD-Release-1b044ad248f43ab783d3.json  target-ALL_BUILD-Release-5ac504be5cdc276079fb.json  target-AsposeXlsTest-Debug-5d6f3e14b0996dd8177d.json  target-AsposeXlsTest-Debug-62162b2d8a54dd9bc4d3.json  target-AsposeXlsTest-Debug-cf9267de9d6bcb01271a.json  target-AsposeXlsTest-MinSizeRel-2df7a2b451f081240219.json  target-AsposeXlsTest-MinSizeRel-54967c55609eb321c65b.json  target-AsposeXlsTest-MinSizeRel-c11e9cbe367a24cff2d5.json  target-AsposeXlsTest-RelWithDebInfo-2137bfc5c5877ba81221.json  target-AsposeXlsTest-RelWithDebInfo-3a1ad061c9c3dd309568.json  target-AsposeXlsTest-RelWithDebInfo-f1749ea7763c8e9bb54e.json  target-AsposeXlsTest-Release-57822e233141061e6038.json  target-AsposeXlsTest-Release-97b336d5aa62a994b1a5.json  target-AsposeXlsTest-Release-c6bc35f61bfbe107e1e0.json  target-Livlib-Debug-51d2f563c51fd715e85b.json  target-Livlib-Debug-55ee368ba6001af2c84e.json  (+104 more)
cmake-build/3rd/SDL/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  SDL3-shared.vcxproj  SDL3-shared.vcxproj.filters  SDL3.sln  SDL3headersTargets.cmake  SDL3sharedTargets.cmake  SDL_uclibc.vcxproj  SDL_uclibc.vcxproj.filters
cmake-build/3rd/SDL/include-revision/SDL3/: SDL_revision.h
cmake-build/livengine/resources/: barrel_blue.tsx  map.tmj  rocks_02.tsx  rocks_04.tsx
cmake-build/livengine/resources/shaders/: frag.spv
cmake-build/livengine/scripts/adventure/: client.lua  client2.lua  server.lua  server2.lua
cmake-build/livengine/scripts/example/: graphics.lua
cmake-build/livnet/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  livnet.sln  livnet.vcxproj  livnet.vcxproj.filters
cmake-build/livnet/resources/: deco.tsx  foam.tsx  rocks_03.tsx  tnt_blue.tsx
cmake-build/livnet/resources/shaders/: shader.frag
cmake-build/livnet/scripts/adventure/: client_config.lua
cmake-build/livnet/scripts/example/: collision_circles.lua  collision_ray_quad.lua  config3.lua  server.js  server.lua  ui2.lua
cslib/AsposeXlsTest/: AsposeExcelHelper.cs  Program.cs
cslib/Livlib/: JsonHelper.cs  KcpServer.cs  Tilemap.cs
cslib/Livlib/Collision/: FixAABB.cs  FixGjk3D.cs  FixGjk3DShape.cs
cslib/Livlib/FixMath/: Fix64.cs  Fix64SinLut.cs  Fix64TanLut.cs  FixMat44.cs  FixVec2.cs  FixVec3.cs  FixVec4.cs
cslib/Livlib/Native/: CollisionF.cs  Core.cs  FP.cs  FT.cs  Kcp.cs  Mat22.cs  Mat22F.cs  Mat44.cs  Mat44F.cs  SDL.cs  ShapeBatch.cs  SpriteBatch.cs  Sys.cs  Utils.cs  Vec2.cs  Vec2F.cs  Vec3.cs  Vec3F.cs
cslib/MonoTest/: AsposeExcelHelper.cs  Class1.cs  RefOutExample.cs
cslib/SpireXlsTest/: Program.cs
cslib/Test1/: Class1.cs  Program.cs  Program2.cs  RefOutExample.cs
cslib/Test2/: Program.cs
livnet/: Android.mk  CMakeLists.txt  cs-collision.c  cs-kcp.c  cs-math.c  cs-sdl.c  cs-shape-batch.c  cs-sprite-batch.c  cs-sys.c  cs-utils.c  csclib.h  js-base.c  js-fp.c  js-lockstep.c  js-vec2.c  js-vec2f.c  jsclib.h  liv-audio.c  liv-audio.h  liv-collision.h  liv-config.h  liv-cont.h  liv-csx.c  liv-csx.h  liv-ecs.c  liv-ecs.h  liv-env.c  liv-env.h  liv-gjk.c  liv-gjk.h  liv-graphics.c  liv-graphics.h  liv-hash.h  liv-iocp.c  liv-iocp.h  liv-joystick.c  liv-joystick.h  liv-jsx.c  liv-jsx.h  liv-lockstep.c  (+63 more)
